# novaprox

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  resolved.txt
.github/workflows/: static.yml  update-configs.yml
docker/: .gitignore  Dockerfile  build.sh  entrypoint.sh  mikrotik.rsc
sources/: sources-debug.txt  sources-ss.txt  sources-trojan.txt  sources-vless.txt  sources-vmess.txt  sources.txt
src/: dns_cache.rs  main.rs  parse_url.rs  proxy_config.rs  xray_config.rs
sub/: all.txt  primary.txt  trojan.txt  vless.txt  vmess.txt
